kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: remote2-ingress
  namespace: client-webapps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /remote2(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: remote-2-svc
                port:
                  number: 80
          - path: /RemoteTwo(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: remote-2-svc
                port:
                  number: 80
